# mlx-lfm-demo

./: .gitignore  LFMAGENT.md  README.md  chat.py  main.py  pyproject.toml
src/: sandbox.py
src/mlx_lfm_demo/: chat.py  lfm_chat.py  main.py  tools.py
tests/: test_lfm_chat.py  test_lfm_nonstandard_tool_calls.py  test_tools.py
