[project]
name = "mlx-lfm-demo"
version = "0.1.0"
description = "MLX LiquidAI demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.31.1",
    "mlx-lm",
    "transformers>=5.5.0",
]

[tool.setuptools]
py-modules = ["main", "chat", "tools"]

[project.scripts]
run-app = "main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
