[project]
name = "mlx-lfm-demo"
version = "0.1.0"
description = "MLX LiquidAI demo"
authors = [
    { name="snoe925", email="snoe925@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.31.1",
    "mlx-lm",
    "transformers>=5.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mlx-lfm-demo = "mlx_lfm_demo:main"

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["src/mlx_lfm_demo"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
